--- a/src/app/components/calendar/calendar.component.html
+++ b/src/app/components/calendar/calendar.component.html
@@ -1,15 +1,17 @@
-<mat-card *ngFor="let event of events" class="card">
-  <mat-card-header>
-    <mat-card-title>{{ event.title }}</mat-card-title>
-    <mat-card-subtitle>{{ event.subtitle }}</mat-card-subtitle>
-  </mat-card-header>
-  <img mat-card-image [src]="event.image.src" [alt]="event.image.alt">
-  <mat-card-content>
-    <p>
-      {{ event.description }}
-    </p>
-  </mat-card-content>
-  <mat-card-actions>
-    <button mat-button>MERKEN</button>
-  </mat-card-actions>
-</mat-card>
+<div fxLayout="row wrap" fxLayoutGap="32px" fxLayoutAlign="center">
+  <mat-card *ngFor="let event of events" class="card">
+    <mat-card-header>
+      <mat-card-title>{{ event.title }}</mat-card-title>
+      <mat-card-subtitle><a [routerLink]="['/location', event.location.id]">{{ event.location.name }}</a></mat-card-subtitle>
+    </mat-card-header>
+    <img mat-card-image [src]="event.image.src" [alt]="event.image.alt">
+    <mat-card-content>
+      <p>
+        {{ event.description }}
+      </p>
+    </mat-card-content>
+    <mat-card-actions>
+      <button mat-button>MERKEN</button>
+    </mat-card-actions>
+  </mat-card>
+</div>
