--- a/src/app/components/calendar/calendar.component.styl
+++ b/src/app/components/calendar/calendar.component.styl
@@ -1,2 +1,7 @@
 .card
-  max-width 400px
+  margin-bottom 16px
+  @media (min-width: 560px)
+    width 200px
+  a
+    color inherit
+    text-decoration none
