--- a/src/app/components/app.component.html
+++ b/src/app/components/app.component.html
@@ -1,4 +1,5 @@
-<app-toolbar></app-toolbar>
+<!-- <app-toolbar></app-toolbar>
 <div class="main-panel">
   <router-outlet></router-outlet>
-</div>
+</div> -->
+<app-sidenav></app-sidenav>
