Added logos to toolbar & favicon

--- a/src/app/components/sidenav/sidenav.component.styl
+++ b/src/app/components/sidenav/sidenav.component.styl
@@ -4,5 +4,9 @@ mat-sidenav-container
 button.menu-toggle-btn
   margin-right 0.75rem
 
+img.toolbar-logo
+  margin-right 0.75rem
+  cursor pointer
+
 mat-icon.icon
   margin-right 0.75rem
