--- a/src/app/components/sidenav/sidenav.component.html
+++ b/src/app/components/sidenav/sidenav.component.html
@@ -3,7 +3,8 @@
     <button class="menu-toggle-btn" type="button" aria-label="Toggle sidenav" mat-icon-button (click)="drawer.toggle()">
       <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
     </button>
-    <span>Ramstein</span>
+    <img routerLink="/" routerLinkActive="router-link-active"  class="toolbar-logo" src="./assets/logo.png">
+    <a routerLink="/" class="toolbar-header">Aktionswoche Stopp Air Base Ramstein 2019</a>
   </mat-toolbar-row>
 </mat-toolbar>
 <mat-sidenav-container class="example-container">
