--- a/src/app/components/sidenav/sidenav.component.html
+++ b/src/app/components/sidenav/sidenav.component.html
@@ -3,8 +3,10 @@
     <button class="menu-toggle-btn" type="button" aria-label="Toggle sidenav" mat-icon-button (click)="drawer.toggle()">
       <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
     </button>
-    <img routerLink="/" routerLinkActive="router-link-active"  class="toolbar-logo" src="./assets/logo-toolbar.png">
-    <a routerLink="/" class="toolbar-header">Aktionswoche Stopp Air Base Ramstein 2019</a>
+    <img routerLink="/" class="toolbar-logo" src="./assets/logo-toolbar.png">
+    <a routerLink="/" class="toolbar-header">Aktionswoche
+      <span class="title-extended">Stopp Air Base Ramstein 2019</span>
+    </a>
   </mat-toolbar-row>
 </mat-toolbar>
 <mat-sidenav-container class="example-container">
