--- a/src/app/components/sidenav/sidenav.component.styl
+++ b/src/app/components/sidenav/sidenav.component.styl
@@ -8,5 +8,9 @@ img.toolbar-logo
   margin-right 0.75rem
   cursor pointer
 
+span.title-extended
+  @media screen and (max-width: 599px)
+    display none
+
 mat-icon.icon
   margin-right 0.75rem
