Added notification logic and added workaround for bug in angular-cli: https://github.com/angular/angular-cli/issues/13954

--- a/src/app/components/info/info.component.html
+++ b/src/app/components/info/info.component.html
@@ -1,3 +1,6 @@
-<p>
-  info works!
-</p>
+<button mat-fab color="primary" (click)="subscribeToNotifications()">
+  Subscribe
+</button>
+<button mat-fab color="secondary" (click)="sendNotification()">
+  Send
+</button>
