--- a/src/app/components/sidenav/sidenav.component.html
+++ b/src/app/components/sidenav/sidenav.component.html
@@ -10,7 +10,7 @@
   </mat-toolbar-row>
 </mat-toolbar>
 <mat-sidenav-container class="example-container">
-  <mat-sidenav #drawer mode="side" opened role="navigation">
+  <mat-sidenav #drawer mode="side" role="navigation">
     <mat-nav-list>
       <a mat-list-item routerLink='/info'>
         <mat-icon class="icon">info</mat-icon>Info
