--- a/src/app/components/info/info.component.html
+++ b/src/app/components/info/info.component.html
@@ -1,6 +1,15 @@
-<button mat-fab color="primary" (click)="subscribeToNotifications()">
-  Subscribe
-</button>
-<button mat-fab color="secondary" (click)="sendNotification()">
-  Send
-</button>
+<h1>Info</h1>
+<h2>Camping</h2>
+<p>
+  Camping is nice
+</p>
+
+<h2>Smoking</h2>
+<p>
+  Smoking is forbidden!
+</p>
+
+<h2>Emergency</h2>
+<p>
+  Call 112
+</p>
