--- a/src/app/components/sidenav/sidenav.component.html
+++ b/src/app/components/sidenav/sidenav.component.html
@@ -10,8 +10,11 @@
   </mat-toolbar-row>
 </mat-toolbar>
 <mat-sidenav-container class="example-container">
-  <mat-sidenav #drawer mode="side" role="navigation">
+  <mat-sidenav #drawer opened mode="side" role="navigation">
     <mat-nav-list>
+      <a mat-list-item routerLink='/'>
+        <mat-icon class="icon">home</mat-icon>Home
+      </a>
       <a mat-list-item routerLink='/info'>
         <mat-icon class="icon">info</mat-icon>Info
       </a>
