Updated location list

--- a/src/app/components/sidenav/sidenav.component.html
+++ b/src/app/components/sidenav/sidenav.component.html
@@ -24,6 +24,9 @@
       <a mat-list-item routerLink='/calendar'>
         <mat-icon class="icon">calendar_today</mat-icon>Calendar
       </a>
+      <a mat-list-item routerLink='/location'>
+        <mat-icon class="icon">room</mat-icon>Locations
+      </a>
       <a mat-list-item routerLink='/help'>
         <mat-icon class="icon">help</mat-icon>Help
       </a>
