Readded info icon

--- a/src/app/components/sidenav/sidenav.component.html
+++ b/src/app/components/sidenav/sidenav.component.html
@@ -15,7 +15,9 @@
       <a mat-list-item routerLink='/'>
         <mat-icon class="icon">home</mat-icon>Home
       </a>
-
+      <a mat-list-item routerLink='/info'>
+        <mat-icon class="icon">info</mat-icon>Info
+      </a>
       <a mat-list-item routerLink='/map'>
         <mat-icon class="icon">room</mat-icon>Map
       </a>
