--- a/src/app/components/calendar/calendar.component.html
+++ b/src/app/components/calendar/calendar.component.html
@@ -12,7 +12,9 @@
     </mat-card-content>
     <mat-card-actions>
       <button mat-stroked-button (click)="favorite(event)">
-          <mat-icon class="icon">favorite_outline</mat-icon>&nbsp;Favorite
+          <mat-icon *ngIf="!event.favorite" class="icon">favorite_outline</mat-icon>
+          <mat-icon *ngIf="event.favorite" class="icon">favorite</mat-icon>
+          &nbsp;Favorite
       </button>
     </mat-card-actions>
   </mat-card>
