--- a/src/app/components/sidenav/sidenav.component.html
+++ b/src/app/components/sidenav/sidenav.component.html
@@ -10,7 +10,7 @@
   </mat-toolbar-row>
 </mat-toolbar>
 <mat-sidenav-container class="example-container">
-  <mat-sidenav #drawer opened mode="side" role="navigation">
+  <mat-sidenav #drawer mode="over" role="navigation">
     <mat-nav-list>
       <a mat-list-item routerLink='/'>
         <mat-icon class="icon">home</mat-icon>Home
