Added sidenav service for opening it in different components: https://github.com/angular/components/issues/2936#issuecomment-296305761

--- a/src/app/components/sidenav/sidenav.component.html
+++ b/src/app/components/sidenav/sidenav.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar color="primary">
   <mat-toolbar-row>
-    <button class="menu-toggle-btn" type="button" aria-label="Toggle sidenav" mat-icon-button (click)="drawer.toggle()">
+    <button class="menu-toggle-btn" type="button" aria-label="Toggle sidenav" mat-icon-button (click)="sidenavService.toggle()">
       <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
     </button>
     <img routerLink="/" class="toolbar-logo" src="./assets/logo-toolbar.png">
@@ -9,7 +9,7 @@
     </a>
   </mat-toolbar-row>
 </mat-toolbar>
-<mat-sidenav-container class="example-container">
+<mat-sidenav-container>
   <mat-sidenav #drawer mode="over" role="navigation">
     <mat-nav-list>
       <a mat-list-item routerLink='/'>
