Refactored toolbar & sidenav in terms of app.component

--- a/src/app/components/app.component.html
+++ b/src/app/components/app.component.html
@@ -1,5 +1,6 @@
-<!-- <app-toolbar></app-toolbar>
-<div class="main-panel">
-  <router-outlet></router-outlet>
-</div> -->
-<app-sidenav></app-sidenav>
+<app-toolbar></app-toolbar>
+<app-sidenav>
+  <div class="content">
+    <router-outlet></router-outlet>
+  </div>
+</app-sidenav>
