--- a/src/app/components/sidenav/sidenav.component.html
+++ b/src/app/components/sidenav/sidenav.component.html
@@ -1,14 +1,3 @@
-<mat-toolbar color="primary">
-  <mat-toolbar-row>
-    <button class="menu-toggle-btn" type="button" aria-label="Toggle sidenav" mat-icon-button (click)="sidenavService.toggle()">
-      <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
-    </button>
-    <img routerLink="/" class="toolbar-logo" src="./assets/logo-toolbar.png">
-    <a routerLink="/" class="toolbar-header">Aktionswoche
-      <span class="title-extended">Stopp Air Base Ramstein 2019</span>
-    </a>
-  </mat-toolbar-row>
-</mat-toolbar>
 <mat-sidenav-container>
   <mat-sidenav #drawer mode="over" role="navigation">
     <mat-nav-list>
@@ -33,8 +22,6 @@
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
-    <div class="content">
-      <router-outlet></router-outlet>
-    </div>
+    <ng-content></ng-content>
   </mat-sidenav-content>
 </mat-sidenav-container>
