Added push notification service

--- a/src/app/components/help/help.component.html
+++ b/src/app/components/help/help.component.html
@@ -7,7 +7,7 @@
   PS: If you tested it on Safari and/or Edge, let me know!
 </p>
 
-<h2>Push-Notifications</h2>
+<!-- <h2>Push-Notifications</h2>
 <p>
   The buttons below trigger push notifications. If you accidentally clicked "Deny" on the browser
   popup asking to allow Notifications, you can re-enable them inside the site-settings (click on
@@ -26,7 +26,7 @@
   <button mat-raised-button color="secondary" (click)="sendNotification()">
     Send Notification to all Subscribers
   </button>
-</div>
+</div> -->
 
 <h2>Add to homescreen</h2>
 <p>
