--- a/src/app/components/push-notification-bar/push-notification-bar.component.html
+++ b/src/app/components/push-notification-bar/push-notification-bar.component.html
@@ -1,5 +1,21 @@
-<div class="bar">
-  <div class="text">{{ pushNotificationStoreService.state$ | async }}</div>
-  <button mat-raised-button color="warn" class="confirm" (click)="pushNotificationStoreService.subscribe()">Confirm</button>
-  <button mat-raised-button class="dismiss" (click)="pushNotificationStoreService.dismiss()">Dismiss</button>
+<div class="bar" *ngIf="(pushNotificationStoreService.state$ | async) === 'notSupported'">
+  <div class="text">Push Notifications are not supported by this browser</div>
+  <button mat-raised-button class="btn push-right" (click)="pushNotificationStoreService.dismiss()">Hide</button>
+</div>
+<div class="bar" *ngIf="(pushNotificationStoreService.state$ | async) === 'supported'">
+  <div class="text">Enable Push-Notifications?</div>
+  <button mat-raised-button color="primary" class="btn push-right" (click)="pushNotificationStoreService.subscribe()">Yes</button>
+  <button mat-raised-button class="btn" (click)="pushNotificationStoreService.disallow()">No</button>
+</div>
+<div class="bar" *ngIf="(pushNotificationStoreService.state$ | async) === 'error'">
+  <div class="text">There was an error enabling Push Notifications</div>
+  <button mat-raised-button class="btn push-right" (click)="pushNotificationStoreService.dismiss()">Hide</button>
+</div>
+<div class="bar" *ngIf="(pushNotificationStoreService.state$ | async) === 'denied'">
+  <div class="text">Push Notifications have been denied</div>
+  <button mat-raised-button class="btn push-right" (click)="pushNotificationStoreService.dismiss()">Hide</button>
+</div>
+<div class="bar" *ngIf="(pushNotificationStoreService.state$ | async) === 'granted'">
+  <div class="text">Push Notifications are enabled</div>
+  <button mat-raised-button class="btn push-right" (click)="pushNotificationStoreService.dismiss()">Hide</button>
 </div>
