Switched from info bar to bottom sheet

--- a/src/app/components/help/help.component.html
+++ b/src/app/components/help/help.component.html
@@ -7,26 +7,12 @@
   PS: If you tested it on Safari and/or Edge, let me know!
 </p>
 
-<!-- <h2>Push-Notifications</h2>
+<h2>Push-Notifications</h2>
 <p>
-  The buttons below trigger push notifications. If you accidentally clicked "Deny" on the browser
-  popup asking to allow Notifications, you can re-enable them inside the site-settings (click on
-  the lock left of the URL). Note that the second button sends a notification to ALL subscribers.
+  On the first load, a dialog box at the bottom asks you for enabling push-notifications. If
+  you accidentally clicked "Deny", you can re-enable them inside the site-settings (click on
+  the lock left of the URL).
 </p>
-<p>
-  Please not that there is a limit in sending notifications that is managed by the browser, so
-  don't send too much or too shortly after one another because there is a good chance you will
-  be blocked by some browsers...
-</p>
-<p>These buttons are for showcase purpose only and will not be part of the final application.</p>
-<div fxLayout="row wrap" fxLayoutGap="32px" fxLayoutAlign="center">
-  <button mat-raised-button color="primary" (click)="subscribeToNotifications()">
-    Subscribe to Notifications
-  </button>
-  <button mat-raised-button color="secondary" (click)="sendNotification()">
-    Send Notification to all Subscribers
-  </button>
-</div> -->
 
 <h2>Add to homescreen</h2>
 <p>
