Added content to info and startpage

--- a/src/app/components/info/info.component.html
+++ b/src/app/components/info/info.component.html
@@ -1,15 +1,18 @@
 <h1>Info</h1>
-<h2>Camping</h2>
-<p>
-  Camping is nice
-</p>
 
-<h2>Smoking</h2>
-<p>
-  Smoking is forbidden!
-</p>
+<h2>Kontakt</h2>
+<ul>
+  <li><a href="mailto:info@ramstein-kampagne.eu">info@ramstein-kampagne.eu</a></li>
+  <li><a href="mailto:camp@ramstein-kampagne.eu">camp@ramstein-kampagne.eu</a></li>
+</ul>
 
-<h2>Emergency</h2>
+<h2>Notfallnummern</h2>
+<ul>
+  <li>Während der Demo: <a href="tel:+490000000000">+490000000000</a> (Sanitäter)</li>
+  <li>Im Camp: <a href="tel:+490000000000">+490000000000</a></li>
+</ul>
+
+<h2>Vergangene Push-Notifications</h2>
 <p>
-  Call 112
+  TODO
 </p>
