Replaced ol with leaflet map

--- a/src/app/components/map/map.component.html
+++ b/src/app/components/map/map.component.html
@@ -1,2 +1,4 @@
-<div id="map" class="map"></div>
-<div>The map is subject to change (e.g. the size!)</div>
+<div style="height: 300px;"
+     leaflet
+     [leafletOptions]="options">
+</div>
