--- a/src/app/components/startpage/startpage.component.html
+++ b/src/app/components/startpage/startpage.component.html
@@ -1,6 +1,6 @@
 <div class="heading">
   <h1>
-    Lorem Ipsum
+    {{ 'HELLO' | translate }}
   </h1>
   <img alt="Ramstein Logo" src="./assets/logo-startpage.png">
 </div>
