--- a/src/app/components/info/info.component.html
+++ b/src/app/components/info/info.component.html
@@ -1,18 +1,10 @@
-<h1>Info</h1>
+<h1 [innerHTML]="'INFO_PAGE.TITLE' | translate"></h1>
 
-<h2>Kontakt</h2>
-<ul>
-  <li><a href="mailto:info@ramstein-kampagne.eu">info@ramstein-kampagne.eu</a></li>
-  <li><a href="mailto:camp@ramstein-kampagne.eu">camp@ramstein-kampagne.eu</a></li>
-</ul>
+<h2 [innerHTML]="'INFO_PAGE.CONTACT.TITLE' | translate"></h2>
+<div [innerHTML]="'INFO_PAGE.CONTACT.CONTENT' | translate"></div>
 
-<h2>Notfallnummern</h2>
-<ul>
-  <li>Während der Demo: <a href="tel:+490000000000">+490000000000</a> (Sanitäter)</li>
-  <li>Im Camp: <a href="tel:+490000000000">+490000000000</a></li>
-</ul>
+<h2 [innerHTML]="'INFO_PAGE.EMERGENCY.TITLE' | translate"></h2>
+<div [innerHTML]="'INFO_PAGE.EMERGENCY.CONTENT' | translate"></div>
 
-<h2>Vergangene Push-Notifications</h2>
-<p>
-  TODO
-</p>
+<h2 [innerHTML]="'INFO_PAGE.RECENT_PUSH_NOTIFICATIONS.TITLE' | translate"></h2>
+<strong>TODO</strong>
