--- a/src/app/components/help/help.component.html
+++ b/src/app/components/help/help.component.html
@@ -2,7 +2,7 @@
 <div [innerHTML]="'HELP_PAGE.CONTENT' | translate"></div>
 
 <h2 [innerHTML]="'HELP_PAGE.ADD_TO_HOMESCREEN.TITLE' | translate">Add to homescreen</h2>
-<div [innerHTML]="'HELP_PAGE.PUSH_NOTIFICATIONS.CONTENT' | translate"></div>
+<div [innerHTML]="'HELP_PAGE.ADD_TO_HOMESCREEN.CONTENT' | translate"></div>
 
 <h2 [innerHTML]="'HELP_PAGE.PUSH_NOTIFICATIONS.TITLE' | translate"></h2>
 <div [innerHTML]="'HELP_PAGE.PUSH_NOTIFICATIONS.CONTENT' | translate"></div>
