--- a/src/styles.styl
+++ b/src/styles.styl
@@ -1,4 +1,4 @@
 /* You can add global styles to this file, and also import other style files */
-a
+a:not(.link)
   color inherit
   text-decoration none
