--- a/src/app/components/sidenav/sidenav.component.html
+++ b/src/app/components/sidenav/sidenav.component.html
@@ -7,13 +7,10 @@
       <a mat-list-item routerLink='/info'>
         <mat-icon class="icon">info</mat-icon>{{ 'NAVIGATION.INFO' | translate }}
       </a>
-      <a mat-list-item routerLink='/map'>
-        <mat-icon class="icon">room</mat-icon>{{ 'NAVIGATION.MAP' | translate }}
-      </a>
       <a mat-list-item routerLink='/calendar'>
         <mat-icon class="icon">calendar_today</mat-icon>{{ 'NAVIGATION.CALENDAR' | translate }}
       </a>
-      <a mat-list-item routerLink='/location'>
+      <a mat-list-item routerLink='/locations'>
         <mat-icon class="icon">room</mat-icon>{{ 'NAVIGATION.LOCATIONS' | translate }}
       </a>
       <a mat-list-item routerLink='/help'>
