--- a/src/app/components/locations/locations.component.html
+++ b/src/app/components/locations/locations.component.html
@@ -1,4 +1,4 @@
-<div style="height: 500px;"
+<div style="height: 65vh;"
      leaflet
      [leafletOptions]="options"
      [leafletLayers]="locations">
