--- a/src/app/components/locations/locations.component.styl
+++ b/src/app/components/locations/locations.component.styl
@@ -10,5 +10,7 @@
   @media screen and (min-width: 900px)
     display none
 
-mat-icon.icon
-  margin-right 0.75rem
+.btn
+  margin-bottom 0.5rem
+  mat-icon.icon
+    margin-right 0.75rem
