--- a/src/app/components/info-details/info-details.component.html
+++ b/src/app/components/info-details/info-details.component.html
@@ -1,6 +1,6 @@
 <h1 [innerHTML]="'INFO_PAGE.' + translationKey + '.TITLE' | translate"></h1>
 <h3 [innerHTML]="'INFO_PAGE.' + translationKey + '.SUBTITLE' | translate"></h3>
-<p [innerHTML]="'INFO_PAGE.' + translationKey + '.CONTENT' | translate"></p>
+<div [innerHTML]="'INFO_PAGE.' + translationKey + '.CONTENT' | translate"></div>
 <a mat-button routerLink="/info" class="back-button">
   <mat-icon class="icon">arrow_back_ios</mat-icon>
   {{ 'INFO_PAGE.BACK_BUTTON_LABEL' | translate }}
