--- a/src/styles.styl
+++ b/src/styles.styl
@@ -1,4 +1,13 @@
-/* You can add global styles to this file, and also import other style files */
-a:not(.link)
+.center-text
+  text-align center
+
+.center-image
+  display block
+  margin-left auto
+  margin-right auto
+  @media screen and (max-width: 599px)
+    width 100%
+
+.unstyled-link
   color inherit
   text-decoration none
