Fixed toolbar link styling

--- a/src/app/components/toolbar/toolbar.component.html
+++ b/src/app/components/toolbar/toolbar.component.html
@@ -4,7 +4,7 @@
       <mat-icon aria-label="Sidenav toggle icon">menu</mat-icon>
     </button>
     <img routerLink="/" class="toolbar-logo" src="./assets/logo-toolbar.png">
-    <a routerLink="/" class="toolbar-header">Aktionswoche
+    <a routerLink="/" class="toolbar-header unstyled-link">Aktionswoche
       <span class="title-extended">Stopp Air Base Ramstein 2019</span>
     </a>
   </mat-toolbar-row>
